# vertex-ai-template

./: .gitignore  LICENSE  README.md  docker-compose.yaml  invoke-dev.yaml  invoke-prod.yaml  invoke.yaml  pyproject.toml
components/evaluator/: Dockerfile
components/evaluator/tasks/: __init__.py
components/trainer/tasks/: __init__.py
functions/: main.py  requirements.txt
tasks/: __init__.py  components.py  pipeline.py
terraform/dev/: google_artifact_registry.tf  google_cloud_scheduler_job.tf  google_cloudfunctions2_function.tf  google_project_iam_member.tf  google_project_service.tf  google_service_account.tf  google_storage_bucket.tf  google_storage_bucket_object.tf
terraform/prod/: archive_file.tf  google_cloud_scheduler_job.tf  google_cloudfunctions2_function.tf  main.tf
